# pycoustic

./: .gitignore  README.md  pyproject.toml
pycoustic/: __init__.py  log.py  pycoustic_gui_app-ai.py  pycoustic_gui_app.py  pycoustic_streamlit_gpt5.py  streamlit-ai.py  streamlit-new.py  streamlit_pycoustic_gpt5.py  survey.py  tkgui.py  weather.py
pycoustic/parsers/: __init__.py  base.py  nor140_overview_xlsx.py  nor145_multi_th.py  registry.py
tests/: UA1_py.csv  UA2_py.csv  UA3_py.csv  UA4_py.csv  nor145-multiple-th.xlsx  nth-highest-lowest-oracle.xlsx  survey_ground_truth.csv  test_log.py  test_nor145_multi_th.py  test_nth_high_low_oracle.py  test_peak_picker.py
