[tool.poetry]
name = "pycoustic"
version = "0.1.18"
description = ""
authors = ["thumpercastle <tony.ryb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <=3.13"
pandas = "2.3.3"
numpy = "2.3.3"
openpyxl = "3.1.5"
requests = "^2.32.4"
plotly = "^6.3.1"
pgeocode = "0.5.0"
streamlit = "^1.46.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
