[tool.poetry]
name = "pycoustic"
version = "0.2.2"
description = ""
authors = ["thumpercastle <tony.ryb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <=3.13"
pandas = "2.3.3"
numpy = "2.3.3"
openpyxl = "3.1.5"
requests = "^2.32.5"
plotly = "^6.6.0"
pgeocode = "0.5.0"
streamlit = "^1.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
