[tool.poetry]
name = "pycoustic"
version = "0.2.7"
description = ""
authors = ["thumpercastle <tony.ryb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "2.3.3"
numpy = "2.3.3"
openpyxl = "3.1.5"
requests = "^2.32.5"
plotly = "^6.6.0"
pgeocode = "0.5.0"
streamlit = "^1.55.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
